Correccion de rutas librerias

--- a/index.html
+++ b/index.html
@@ -83,10 +83,10 @@
 
 </body>
 <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
-<link rel="stylesheet" href="libraries/bootstrap.min.css">
-<link rel="stylesheet" href="style.css">
-<script src="libraries/jquery.min.js"></script>
-<script src="libraries/bootstrap.min.js"></script>
+<link rel="stylesheet" href="css/bootstrap.min.css">
+<link rel="stylesheet" href="css/style.css">
+<script src="js/jquery.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
 
 <script type="text/javascript" >
     $('.carousel').carousel({
