--- a/index.html
+++ b/index.html
@@ -2,35 +2,24 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <title>Miguel Cruz</title>
 </head>
 <body>
-    <nav class="navbar navbar-default">
-        <div class="container">
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="#">MD</a>
-            </div>
-
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav navbar-right">
-                    <li class="active"><a href="#">Inicio <span class="sr-only">(current)</span></a></li>
-                    <li><a href="#">Servicios</a></li>
-                    <li><a href="#">Portafolio</a></li>
-                    <li><a href="#">Contacto</a></li>
-                </ul>
-            </div><!-- /.navbar-collapse -->
-        </div><!-- /.container-fluid -->
+    <nav class="mynav">
+        <ul class="mynavul">
+            <li><a href="#Inicio">Inicio</a></li>
+            <li><a href="#Portafolio">Portafolio</a></li>
+            <li><a href="#Contacto">Contacto</a></li>
+        </ul>
     </nav>
 
     <div class="contenido">
+        <section>
+            <div class="text-center">
+
+            </div>
+        </section>
         <section id="Inicio" class="init">
             <div class="page-title">
                 <span class="firstLetter">M</span>iguel
@@ -38,59 +27,17 @@
             </div>
         </section>
     </div>
-    <!--<div class="col-sm-3">-->
-        <!--<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">-->
-            <!--&lt;!&ndash; Indicators &ndash;&gt;-->
-            <!--<ol class="carousel-indicators">-->
-                <!--<li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>-->
-                <!--<li data-target="#carousel-example-generic" data-slide-to="1"></li>-->
-                <!--<li data-target="#carousel-example-generic" data-slide-to="2"></li>-->
-            <!--</ol>-->
-
-            <!--&lt;!&ndash; Wrapper for slides &ndash;&gt;-->
-            <!--<div class="carousel-inner" role="listbox">-->
-                <!--<div class="item active">-->
-                    <!--<img src="images/programmer.jpg" alt="programador1">-->
-                    <!--<div class="carousel-caption">-->
-
-                    <!--</div>-->
-                <!--</div>-->
-                <!--<div class="item">-->
-                    <!--<img src="images/programmer2.jpg" alt="programador2">-->
-                    <!--<div class="carousel-caption">-->
-
-                    <!--</div>-->
-                <!--</div>-->
-                <!--<div class="item">-->
-                    <!--<img src="images/web.jpg" alt="programador3">-->
-                    <!--<div class="carousel-caption">-->
-
-                    <!--</div>-->
-                <!--</div>-->
-            <!--</div>-->
-
-            <!--&lt;!&ndash; Controls &ndash;&gt;-->
-            <!--<a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">-->
-                <!--<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>-->
-                <!--<span class="sr-only">Previous</span>-->
-            <!--</a>-->
-            <!--<a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">-->
-                <!--<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>-->
-                <!--<span class="sr-only">Next</span>-->
-            <!--</a>-->
-        <!--</div>-->
-    <!--</div>-->
-
 </body>
 <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
 <link rel="stylesheet" href="css/bootstrap.min.css">
 <link rel="stylesheet" href="css/style.css">
 <script src="js/jquery.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
-
-<script type="text/javascript" >
-    $('.carousel').carousel({
-        interval: 2000
-    })
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+    (adsbygoogle = window.adsbygoogle || []).push({
+        google_ad_client: "ca-pub-2030991439713900",
+        enable_page_level_ads: true
+    });
 </script>
 </html>
